<resources>
    <string name="app_name">Instagram</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="signout">Sign Out</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_instead">New user? Sign up instead!</string>
    <string name="take_picture">Take Picture</string>
    <string name="caption_hint">Enter Caption</string>
    <string name="submit_post">Submit</string>
    <string name="text_home">Home</string>
    <string name="text_search">Search</string>
    <string name="text_create">Create</string>
    <string name="text_favorite">Favorites</string>
    <string name="text_profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>