<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home_feed"
        android:enabled="true"
        android:icon="@drawable/home_feed_bottom_selector"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/text_search"
        app:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/action_create"
        android:enabled="true"
        android:icon="@drawable/new_post_bottom_selector"
        android:title="@string/text_create"
        app:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/favorite_bottom_selector"
        android:title="@string/text_favorite"
        app:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/profile_bottom_selector"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom"
         />
</menu>