<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/enclosing_relative_layout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/instagram_cursive"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            app:tint="@color/colorAccent"
            android:src="@drawable/ic_instagram_wordmark" />

        <EditText
            android:id="@+id/username_edittext_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/instagram_cursive"
            android:gravity="center_horizontal"
            android:hint="@string/username_hint"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="text" />

        <EditText
            android:id="@+id/password_edittext_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edittext_view"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edittext_view"
            android:text="@string/signin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/signup_instead_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signin_button"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/signup_instead" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_instead_text_view"
            android:text="@string/signup"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textAllCaps="false" />

    </RelativeLayout>

</RelativeLayout>